# Bibliotech

./: .gitignore  .isort.cfg  .pylintrc  Makefile  README.md  pyproject.toml
bibliotech/: manage.py
bibliotech/bibliotech/: asgi.py  settings.py  urls.py  wsgi.py
bibliotech/books/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
bibliotech/books/migrations/: 0001_initial.py  0002_book_authors_book_publisher.py  0003_alter_bookauthor_twitter_username.py  0004_alter_book_cover_image.py  0005_alter_bookauthor_photo_alter_publisher_logo.py  0006_bookrecord.py  0007_bookrecord_rating_and_more.py  0008_genre_book_genres.py  0009_genre_description.py  0010_alter_book_genres.py  0011_book_page_count_bookrecord_pages_read_and_more.py
bibliotech/users/: admin.py  apps.py  forms.py  models.py
bibliotech/users/migrations/: 0001_initial.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  test.py
